syntax = "proto3";

message EchoRequest {
    string msg = 1;
}

message EchoResponse {
    string msg = 1;
}

service Echo {
    rpc echo(EchoRequest) returns (EchoResponse);
    rpc rev_echo(EchoRequest) returns (EchoResponse);
}